--- a/domanagement-api/pom.xml
+++ b/domanagement-api/pom.xml
@@ -3,11 +3,11 @@
   <parent>
     <groupId>com.newintelligence</groupId>
     <artifactId>domanagement</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
   </parent>
   <artifactId>domanagement-api</artifactId>
   <packaging>war</packaging>
-  
+  <version>0.0.2</version>
   <build>
 		<finalName>${project.name}</finalName>
 		<plugins>
