--- a/domanagement-datamodel/pom.xml
+++ b/domanagement-datamodel/pom.xml
@@ -4,10 +4,10 @@
 	<parent>
 		<groupId>com.newintelligence</groupId>
 		<artifactId>domanagement</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>0.0.1</version>
 	</parent>
 	<artifactId>domanagement-datamodel</artifactId>
-
+	<version>0.0.2</version>
 	<build>
 		<plugins>
 			<plugin>
